--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
     <title>Todo-sovellus!</title>
   </head>
   <body>
-    <app></app>
-    <script src="build/bundle.js"></script>
+    <!----<app></app>-->
+    <div class="info" style="margin-left: 33%;"></div>
+      <h2>Eikö sinulla ole vielä tiliä? <a href="/signup">Rekisteröidy</a></h2>
+      <h2>Tai <a href="/login">kirjaudu sisään</a>.</h2>
+  </div>
+    <script src="./build/bundle.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
